[package]
name = "pullse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus = "0.13.0"
reqwest = { version = "0.11.7", features = ["blocking", "json"] }
serde = { version = "1.0.132", features = ["derive"] }
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
