[package]
name = "pullse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11.0"
serde = { version = "1.0.132", features = ["derive"] }
serde_derive = "1.0.132"
reqwest = { version = "0.11.7", features = ["blocking", "json"] }
tokio = "1.15.0"
warp = "0.3.2"
prometheus = "0.13.0"
